fix nav menu not displaying on mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ hr {
 
 /* navbar -1  */
 
-.navbar-1 {
+.navbar {
     display: flex;
     position: relative;
     justify-content: space-between;
@@ -382,7 +382,7 @@ hr {
 }
 
 @media (max-width: 600px) {
-    .navbar-1 {
+    .navbar {
         flex-direction: column;
         align-items: flex-start;
     }
@@ -413,7 +413,6 @@ hr {
         display: flex;
     }
 }
-
 
 
 /* @media only screen and (max-width: 770px) */
